--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet" href="port.css">
+    <link rel="stylesheet" href="./style.css">
     <title>ポートフォリオサイト</title>
 </head>
 <body>
     <header id="header">
         <h1>
-            <a href="port.html">今後自作予定</a>
+            <a href="./index.html">今後自作予定</a>
         </h1>
         <ul>
             <li>出し入れできるレスポンシブル可のメニュー作る予定</li>
