--- a/works/index.html
+++ b/works/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/img/favicon.ico">
+    <link rel="icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="style.css">
     <title>ポートフォリオ用１回目</title>
@@ -15,7 +15,7 @@
     <header id="header" class="wrapper">
         <h1 class="hd-logo">
             <a href="index.html">
-                <img src="img/img/logo.svg" alt="title">
+                <img src="./img/logo.svg" alt="title">
             </a>
         </h1>
 
@@ -26,7 +26,7 @@
     </header>
     <main>
         <div id="main-img">
-            <img src="img/img/mainvisual.jpg" alt="">
+            <img src="./img/mainvisual.jpg" alt="">
         </div>
 
 
@@ -35,7 +35,7 @@
                 About
             </h2>
             <div class="about-con">
-                <img src="img/img/about.jpg" alt="about-img">
+                <img src="./img/about.jpg" alt="about-img">
                 <div class="about-text">
                     <h3 class="con-title">KAKERU MIYAICHI</h3>
                     <p>
@@ -54,17 +54,17 @@
             </h2>
             <ul>
                 <li>
-                    <img src="img/img/bicycle1.jpg" alt="bicycle-img1">
+                    <img src="./img/bicycle1.jpg" alt="bicycle-img1">
                     <h3 class="con-title">タイトル</h3>
                     <p>テキストテキストテキスト</p>
                 </li>
                 <li>
-                    <img src="img/img/bicycle2.jpg" alt="bicycle-img2">
+                    <img src="./img/bicycle2.jpg" alt="bicycle-img2">
                     <h3 class="con-title">タイトル</h3>
                     <p>テキストテキストテキスト</p>
                 </li>
                 <li>
-                    <img src="img/img/bicycle3.jpg" alt="bicycle-img3">
+                    <img src="./img/bicycle3.jpg" alt="bicycle-img3">
                     <h3 class="con-title">タイトル</h3>
                     <p>テキストテキストテキスト</p>
                 </li>
