--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="html-art">
             <a href="./works/index.html" target="_blank">
-                <img src="C:\Users\kaika\Downloads\ポートフォリオ用フォルダ\1\img\img\mainvisual.jpg" alt="Profile-siteのmain-img">
+                <img src="./works/img/mainvisual.jpg" alt="Profile-siteのmain-img">
             </a>
             <a href="./works/index.html" target="_blank">
                 <h2>Profileサイト</h2>
