--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </div>
 
         <section id="html-art">
-            <a href="./works/index.html" target="_blank">
-                <img src="works/img/mainvisual.jpg" alt="Profile-siteのmain-img">
+            <a href="./Profile-site/index.html" target="_blank">
+                <img src="Profile-site/img/mainvisual.jpg" alt="Profile-siteのmain-img">
             </a>
-            <a href="./works/index.html" target="_blank">
+            <a href="./Profile-site/index.html" target="_blank">
                 <h2>Profileサイト</h2>
             </a>
 
